# enterprise_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: deps.py  main.py  metrics.py  middleware.py  rate_limit.py  routes.py  schemas.py
core/: config.py  logging.py  types.py
data/sample/: AAPL_2024.html  MSFT_2024.html
docs/: architecture.md
evaluation/: __main__.py  dataset.py  judge.py  metrics.py  qa_set.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  api.ts  types.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnswerCard.tsx  ChunkList.tsx  HealthBadge.tsx  Layout.tsx  QueryHistory.tsx  QueryInput.tsx  SourceModal.tsx
frontend/src/pages/: QueryPage.tsx
frontend/src/styles/: global.css
generation/: answer.py  llm.py  prompts.py
generation/providers/: anthropic_client.py  nvidia_client.py  ollama_client.py
index/: __main__.py  bm25.py  embeddings.py  vector_store.py
ingestion/: __main__.py  chunker.py  edgar.py  parser.py
retrieval/: dense.py  filters.py  fusion.py  pipeline.py  reranker.py  sparse.py
tests/: conftest.py  test_api_integration.py  test_bm25.py  test_chunker.py  test_eval.py  test_fusion.py  test_prompts.py  test_reranker.py
tests/fixtures/: tiny_filing.html
